--- a/package.json
+++ b/package.json
@@ -3,18 +3,31 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "nodemon --exec ts-node sever.ts",
+    "lint": "eslint src --ext js,ts --report-unused-disable-directives --max-warnings 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
+  
   "dependencies": {
-    "express": "^4.21.2"
+    "body-parser": "^2.2.0",
+    "cloudinary": "^2.6.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.13.1",
+    "multer": "^1.4.5-lts.2",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.27.0",
     "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "eslint": "^9.23.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
