--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES6", // cho phép biên dịch code Typescript sang kiểu ES6
-    "module": "commonjs", // CommonJS là tiêu chuẩn được sử dụng trong Node.js để làm việc với các module
-    "removeComments": true, // xóa comments khi biên dịch sang file js,
-    "esModuleInterop": true, // Dùng được từ khóa import thay cho require
-    "outDir": "build"
-  }
+    "target": "ES6",                   // Biên dịch về ES6
+    "module": "commonjs",              // Cho Node.js
+    "removeComments": true,            // Xoá comment khi build
+    "esModuleInterop": true,           // Import theo kiểu ES6
+    "outDir": "api",                   // File JS build ra thư mục "api"
+    "rootDir": ".",                    // File TS gốc ở root
+    "strict": true,                    // Bật kiểm tra chặt chẽ
+    "skipLibCheck": true,              // Bỏ kiểm tra file .d.ts
+    "forceConsistentCasingInFileNames": true // Tránh lỗi phân biệt chữ hoa/thường
+  },
+  "include": [
+    "server.ts",
+    "src/**/*"
+  ]
 }
