--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node sever.ts",
+    "start:dev": "nodemon --exec ts-node sever.ts",
+    "start": "node build/sever.js",
     "lint": "eslint src --ext js,ts --report-unused-disable-directives --max-warnings 0",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "description": "",
-  
   "dependencies": {
     "body-parser": "^2.2.0",
     "cloudinary": "^2.6.0",
