--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon --exec ts-node sever.ts",
+    "dev": "nodemon --exec ts-node sever.ts",
     "start": "node build/sever.js",
     "lint": "eslint src --ext js,ts --report-unused-disable-directives --max-warnings 0",
     "test": "echo \"Error: no test specified\" && exit 1",
