--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.13.1",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "eslint": "^9.23.0",
