--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.0",
