--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.13.1",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
+    "qs": "^6.14.0",
     "streamifier": "^0.1.1",
     "zod": "^3.25.28"
   },
