--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.13.1",
+    "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
     "qs": "^6.14.0",
     "streamifier": "^0.1.1",
+    "vnpay": "^2.3.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
