--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.13.1",
@@ -29,6 +30,8 @@
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "qs": "^6.14.0",
     "streamifier": "^0.1.1",
     "vnpay": "^2.3.0",
